# network-forensics-mcp-server

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_server.py  test_simple.py
src/mcp_network_forensics/: __init__.py  __main__.py  config.py  exceptions.py  server.py
src/mcp_network_forensics/analysis/: __init__.py
src/mcp_network_forensics/capture/: __init__.py  file_capture.py  tshark_wrapper.py
src/mcp_network_forensics/models/: __init__.py  packet.py
src/mcp_network_forensics/utils/: formatters.py  validators.py
